--- a/build.yaml
+++ b/build.yaml
@@ -22,3 +22,5 @@
     shield: yuri_KB_left
   - board: seeeduino_xiao_ble
     shield: yuri_KB_right
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
