--- a/config/yuri_KB.conf
+++ b/config/yuri_KB.conf
@@ -2,3 +2,8 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_ZMK_SPLIT_BLE=y
 CONFIG_ZMK_SLEEP=y
+
+# Enable mouse-keys and cirque trackpad
+CONFIG_ZMK_MOUSE=y
+CONFIG_INPUT=y
+CONFIG_INPUT_PINNACLE=y
