--- a/boards/shields/yuri_KB/yuri_KB.dtsi
+++ b/boards/shields/yuri_KB/yuri_KB.dtsi
@@ -57,7 +57,7 @@ RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)       RC(2,6) RC(2,7) RC(2,8) RC
     glidepoint: glidepoint@2a {
         compatible = "cirque,pinnacle";
         reg = <0x2a>;
-        status = "disabled";
+        status = "okay";
         dr-gpios = <&gpio1 10 (GPIO_ACTIVE_HIGH)>;
 
         sensitivity = "4x";
