--- a/config/yuri_KB_left.conf
+++ b/config/yuri_KB_left.conf
@@ -4,7 +4,7 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_ZMK_SLEEP=y
 
 CONFIG_I2C=y
-##CONFIG_PINNACLE=y
+# CONFIG_PINNACLE=y
 CONFIG_ZMK_MOUSE=y
 CONFIG_INPUT=y
 CONFIG_INPUT_PINNACLE=y
