--- a/config/yuri_KB_right.conf
+++ b/config/yuri_KB_right.conf
@@ -1,7 +1,7 @@
 CONFIG_ZMK_SLEEP=y
 
 CONFIG_I2C=y
-# CONFIG_PINNACLE=y
+CONFIG_PINNACLE=y
 CONFIG_ZMK_MOUSE=y
 CONFIG_INPUT=y
 CONFIG_INPUT_PINNACLE=y
