--- a/build.yaml
+++ b/build.yaml
@@ -21,6 +21,6 @@
   - board: seeeduino_xiao_ble
     shield: yuri_KB_left
   - board: seeeduino_xiao_ble
-    shield: yuri_KB_right
+#    shield: yuri_KB_right
 #  - board: seeeduino_xiao_ble
-#    shield: settings_reset
+    shield: settings_reset
